[package]
name = "temporal"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
ormx = { version = "0.10.0", features = ["postgres"] }
tokio = { version = "1.23.0", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8.5", features = ["std_rng"] }
base64 = "0.13.1"
openssl = "*"
openssl-probe = "*"
reqwest = "0.11.13"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "postgres", "runtime-tokio-rustls", "chrono", "offline"]